@@ -48,7 +48,7 @@ class Channel < ActiveRecord::Base
     xmlhash.elements('target') { |p|
       prj = Project.find_by_name(p['project'])
       r = prj.repositories.find_by_name(p['repository'])
-      self.channel_targets.build(:repository => r, :tag => p['tag']) if r
+      self.channel_targets.build(:repository => r, :id_template => p['id_template']) if r
     }
     xmlhash.elements('binaries').each { |p|
       cbl = self.channel_binary_lists.build()
