@@ -90,7 +90,7 @@ class CodeQualityTest < ActiveSupport::TestCase
       'BuildController#project_index' => 129.0,
       'ConfigurationsController#update' => 85.63,
       'IssueTrackersController#update' => 100.78,
-      'MaintenanceIncident#getUpdateinfoId' => 136.88,
+      'MaintenanceIncident#initUpdateinfoId' => 140.32,
       'Owner::extract_maintainer' => 155.65,
       'PersonController#internal_register' => 112.01,
       'Product#update_from_xml' => 162.12, # function is following xml structure
