@@ -50,6 +50,11 @@ Incompatible changes:
 
       /srv/www/obs/api/db/sphinx/production/ 
 
+ * maintenance tag handling via _channel files got replaced with an option
+   to re-define the updateinfo scheme template.
+     We are only aware of one instance using this feature, in case it troubles
+   someone else, please speak up and we will introduce some compatibility handling.
+
 Notes for systems using systemd:
 ================================
 
